# sv_merge

./: .dockstore.yml  .gitignore  CMakeLists.txt  README.md
data/: chr20_16224k-16359k.bed  test.bed  test.fasta  test_alignment_hardclipped_sorted.bam  test_alignment_hardclipped_sorted.bam.bai  test_alignment_softclip_only_sorted.bam  test_alignment_softclip_only_sorted.bam.bai  test_alignments.gaf  test_alignments_cigar.gaf  test_chr20_2000_sites.bed  test_constructed_alignments.gaf  test_graph.gfa  test_query.fasta  test_ref.fasta
docker/: Dockerfile  limits.conf  pushDocker.sh  vm_local_monitoring_script.sh
inc/: Alignment.hpp  Authenticator.hpp  Bam.hpp  BinarySequence.hpp  Filesystem.hpp  Graph.hpp  HalfInterval.hpp  HeteroGraph.hpp  IntervalGraph.hpp  MurmurHash2.hpp  MurmurHash3.hpp  Region.hpp  Sequence.hpp  SimpleAlignment.hpp  SteinerTree.hpp  Timer.hpp  TransitiveMap.hpp  VariantGraph.hpp  VcfReader.hpp  VectorHeteroGraph.hpp  bam.hpp  bed.hpp  debug_mode.hpp  fasta.hpp  fetch.hpp  gaf.hpp  misc.hpp  optimizer.hpp  pair_hash.hpp  path_optimizer.hpp  read_centroid_optimizer.hpp  read_cluster_optimizer.hpp  read_optimizer.hpp  windows.hpp
inc_optimize/: path_optimizer.hpp  path_optimizer_mathopt.hpp  read_centroid_optimizer.hpp
scripts/: compare_evaluation.py  csv_splitter.py  evaluate_model.py  get_hap_consensus_alignment.sh  plot_evaluation.py  plot_logs.py  plot_net_usage.py  predict_variant_scores.py  requirements.txt  simulate_sampling.py  terra_table_to_csv_per_sample.py  train_vcf_filter_model.py  truvari_benchnotate.py
scripts/modules/: data_loader.py  shallow_linear.py
src/: Alignment.cpp  Authenticator.cpp  Bam.cpp  Graph.cpp  HalfInterval.cpp  HeteroGraph.cpp  IntervalGraph.cpp  Region.cpp  Sequence.cpp  SimpleAlignment.cpp  SteinerTree.cpp  Timer.cpp  TransitiveMap.cpp  VariantGraph.cpp  VcfReader.cpp  b.cpp  bam.cpp  bed.cpp  fasta.cpp  fetch.cpp  gaf.cpp  misc.cpp  path_optimizer.cpp  path_optimizer_mathopt.cpp  read_centroid_optimizer.cpp  read_cluster_optimizer.cpp  read_optimizer.cpp  windows.cpp
src/executable/: a.cpp  analyze_evaluation.cpp  annotate.cpp  clean_bnds.cpp  count_distinct_haplotypes.cpp  evaluate.cpp  extract_reads_from_windows.cpp  find_windows.cpp  hapestry.cpp  make_local_hapestry_test_set.cpp  solve_from_csv.cpp  solve_from_directory.cpp
src/test/: demo_multi_objective_ortools.cpp  test_authenticator.cpp  test_bam.cpp  test_bed.cpp  test_binary_sequence.cpp  test_binary_sequence_memory.cpp  test_bisection_method.cpp  test_bitmagic.cpp  test_command_timeout.cpp  test_cpptrace.cpp  test_fasta.cpp  test_fetch.cpp  test_gaf.cpp  test_gaf_summary.cpp  test_graph.cpp  test_graphaligner.cpp  test_halfinterval.cpp  test_heterograph.cpp  test_hts_gcp.cpp  test_hts_gcp_speed.cpp  test_htslib.cpp  test_interval_graph.cpp  test_minimap2_no_io.cpp  test_optimize.cpp  test_ortools.cpp  test_read_clustering.cpp  test_shared_memory.cpp  test_signal_handler.cpp  test_simple_alignment.cpp  test_transmap.cpp  test_transmap_memory.cpp  test_triangle_inequality.cpp  test_variantgraph.cpp  test_variantgraph_acyclic.cpp  test_variantgraph_snp.cpp  test_vcfreader.cpp  test_vector_heterograph.cpp  test_wfa2.cpp
tbd/: pair_hash.cpp  pair_hash.hpp
wdl/: BcftoolsMergeNoDuplicatesSingleCaller.wdl  GraphEvaluation.wdl  VcfdistAndOverlapMetricsEvaluation.wdl  VcfdistEvaluation.wdl  annotate.sh  bcftools_collapse.wdl  clean_vcf.wdl  fill_vcf_ref_alleles_from_fasta.wdl  hapestry_annotate.wdl  hapestry_annotate_scattered.wdl  hapestry_filter.wdl  hapestry_merge.wdl  hapestry_merge_heaptrack.wdl  hapestry_merge_scattered.wdl  hapestry_merge_valgrind.wdl  hapestry_validate.wdl  multi_annotate.wdl  samtools_merge.wdl  subset_csv_samples_using_vcf.wdl  subset_n_samples_from_vcf.wdl  validateWdl.sh
